# reinforcement-learning-training

./: README.md  main.py  pyproject.toml
configs/: config.yaml
configs/agent/: ppo.yaml
notebooks/: first_program.ipynb
scripts/: ppo.py
src/rl_training/agents/: ppo.py
src/rl_training/models/: __init__.py  actor_critic.py
